--- a/style.css
+++ b/style.css
@@ -6,7 +6,26 @@ div{
    
         border: 5px solid;
         margin: auto;
-        width: 20%;
+        width: 30%;
         padding: 10px;      
 }
 
+.divmain{
+   
+   
+        border: 5px solid;
+        margin: auto;
+        width: 80%;
+        padding: 10px;      
+
+}
+
+ul{
+    display: inline-block;
+    margin: auto;
+    padding: 10px;
+}
+
+li{
+    list-style-type: none;
+}
